tests/neg/semantic_undefined_var.baa
// EXPECT: [Error]
// EXPECT: خطأ دلالي
// EXPECT: Assignment to undefined variable
صحيح الرئيسية() {
    س = 1.
    إرجع 0.
}
